# OpenglPractice

./: CMakeLists.txt  README.md  glad.c  lesson3.cpp  light_1_n.cpp  material_1_n.cpp  material_2_n.cpp  math_rel.cpp  rectangle.cpp  texture.cpp
glsl/: 1.colors.fs  1.colors.vs
